--- a/clients-service/src/main/resources/application.properties
+++ b/clients-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.application.name=microcommerce
+spring.application.name=client-service
 server.port=8080
 spring.groovy.template.cache=false
-spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:microcommerce}
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:clients_db}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
