--- a/orders-service/src/test/resources/application-test.properties
+++ b/orders-service/src/test/resources/application-test.properties
@@ -1,20 +1,18 @@
-# Configuration pour les tests - utilise H2 en mémoire
-spring.application.name=microcommerce-test
+spring.application.name=order-service
+server.port=8080
+spring.groovy.template.cache=false
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:orders_db}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-# Base de données H2 en mémoire pour les tests
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# Logs pour debug
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-# Configuration JPA pour les tests
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=false
-
-# Console H2 (pour debug si nécessaire)
-spring.h2.console.enabled=true
-
-# Logs moins verbeux pour les tests
-logging.level.root=WARN
-logging.level.com.ecommerce.microcommerce=INFO
+# Application name
+spring.application.name=orders-service
