--- a/products-service/src/main/resources/application.properties
+++ b/products-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=product-service
 server.port=8080
 spring.groovy.template.cache=false
-spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5433}/${POSTGRES_DB:products_db}
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:products_db}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
@@ -13,3 +13,6 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 # Logs pour debug
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# Application name
+spring.application.name=products-service
